# Srtforge

./: .gitignore  LICENSE  MAD.md  README.md  auto_parry.lua  install.ps1  install.sh  pyproject.toml  requirements.txt
Srtforge-main/: MAD.md  README.md  install.sh  pyproject.toml
Srtforge-main/models/: voc_gabox.yaml
Srtforge-main/srtforge/: cli.py  gui_app.py  logging.py  segmenter.py  sonarr_hook.py  srt_utils.py
Srtforge-main/srtforge/assets/styles/: __init__.py
Srtforge-main/srtforge/post/: srt_utils.py
Srtforge-main/tests/: test_ffmpeg.py
models/: voc_fv4.ckpt  voc_gabox.yaml
packaging/windows/: srtforge_gui.spec
srtforge/: __init__.py  __main__.py  cli.py  config.py  config.yaml  engine_events.py  engine_parakeet.py  engine_whisper.py  ffmpeg.py  gui_app.py  logging.py  pipeline.py  segmenter.py  settings.py  sonarr_hook.py  subscription_app.py  utils.py  whisper.py  win11_backdrop.py
srtforge/asr/: __init__.py  _nemo_compat.py  parakeet_engine.py
srtforge/assets/: __init__.py
srtforge/assets/styles/: win11.qss
srtforge/post/: __init__.py  segmenter.py  srt_utils.py
tatmeen_dashboard/: app.js  data.js  index.html  styles.css
tests/: test_cli_worker.py  test_engine_parakeet.py  test_ffmpeg.py  test_nemo_compat.py  test_parakeet.py  test_pipeline.py  test_settings.py  test_sonarr_hook.py  test_subscription_app.py
