[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "srtforge"
version = "0.3.0"
description = "Offline SRT generator with FV4 separation, Faster-Whisper ASR, and optional Gemini correction."
requires-python = ">=3.10"
authors = [{name="srtforge"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "tqdm>=4.66.4",
  "pyyaml>=6.0.1",
  "requests>=2.32.3",
  "PySide6>=6.7.0",
  "numpy>=2.0.0",
  "pyarrow>=20.0.0,<21",
  "matplotlib>=3.8.0",
  "soundfile>=0.12.1",
  "watchdog>=4.0.0",
  "audio-separator>=0.39.0",
  "cuda-python>=12.3",
  "faster-whisper",
  "google-genai",
]

[project.scripts]
srtforge = "srtforge.cli:app"
srtforge-sonarr = "srtforge.sonarr_hook:main"
srtforge-gui = "srtforge.gui_app:main"

[tool.setuptools]
include-package-data = true
packages = [
  "srtforge",
  "srtforge.assets",
  "srtforge.assets.images",
  "srtforge.assets.styles",
  "srtforge.post",
]

[tool.setuptools.package-data]
"srtforge.assets.styles" = ["win11.qss"]
"srtforge.assets.images" = ["*.png", "*.gif"]
